Fully functional calculator

--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
         <button class="op" id="divide">/</button>
         
         <!-- Clear and equals button -->
-        <button class="num" id="btn-clear">Clear</button>
-        <button class="num" id="btn-equals">=</button>
+        <button id="btn-clear">Clear</button>
+        <button id="btn-equals">=</button>
 
     </div>
 </body>
